<resources>
    <string name="app_name">TestApp</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">SignIn</string>
    <string name="cancel">Cancel</string>
    <string name="databinding_test">DataBinding Test</string>
    <string name="koin_test">Koin Test</string>
    <string name="enum_test">Enum Test</string>
    <string name="live_data_test">LiveData Test</string>
    <string name="epoxy_test">Epoxy Test</string>
    <string name="retrofit_test">Retrofit Test</string>
    <string name="databindingxlivedata_sample">DataBinding x LiveData Sample</string>
    <string name="dagger_test">Dagger Test</string>
    <string name="part1">Part1</string>
    <string name="part2">Part2</string>
    <string name="part3">Part3</string>
    <string name="part4">Part4</string>
    <string name="part5">Part5</string>
</resources>
