<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="handler" type="android.view.View.OnClickListener"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".daggertest.DaggerActivity">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/btn_dagger_part1"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/part1"
                        android:onClick="@{handler::onClick}"/>

                <Button
                        android:id="@+id/btn_dagger_part2"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/part2"
                        android:onClick="@{handler::onClick}"/>

                <Button
                        android:id="@+id/btn_dagger_part3"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/part3"
                        android:onClick="@{handler::onClick}"/>

                <Button
                        android:id="@+id/btn_dagger_part4"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/part4"
                        android:onClick="@{handler::onClick}"/>

                <Button
                        android:id="@+id/btn_dagger_part5"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/part5"
                        android:onClick="@{handler::onClick}"/>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>