<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="handler" type="android.view.View.OnClickListener"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".main.MainActivity">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <Button
                            android:id="@+id/btn_databinding_test"
                            style="Widget.TestApp.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/databinding_test"
                            android:onClick="@{handler::onClick}"/>

                    <Button
                            android:id="@+id/btn_koin_test"
                            style="Widget.TestApp.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/koin_test"
                            android:onClick="@{handler::onClick}"/>

                    <Button
                            android:id="@+id/btn_enum_test"
                            style="Widget.TestApp.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/enum_test"
                            android:onClick="@{handler::onClick}"/>

                    <Button
                            android:id="@+id/btn_live_data_test"
                            style="Widget.TestApp.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/live_data_test"
                            android:onClick="@{handler::onClick}"/>

                    <Button
                            android:id="@+id/btn_epoxy_test"
                            style="Widget.TestApp.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/epoxy_test"
                            android:onClick="@{handler::onClick}"/>

                    <Button
                            android:id="@+id/btn_retrofit_test"
                            style="Widget.TestApp.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/retrofit_test"
                            android:onClick="@{handler::onClick}"/>

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
</layout>